--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -16,6 +16,7 @@ env:
   FUSION_LICENSE: "This Font Software is licensed under the SIL Open Font License, Version 1.1. This license is available with a FAQ at: https://openfontlicense.org"
   IOSEVKA_COPYRIGHT: Copyright 2015-2025, Renzhi Li (aka. Belleve Invis, belleve@typeof.net).
   LXGW_COPYRIGHT: Copyright 2021-2024 LXGW (https://github.com/lxgw/LxgwWenKai-Lite) Copyright 2020 The Klee Project Authors (https://github.com/fontworks-fonts/Klee)
+  LXGW_WENKAI_LITE: https://github.com/lxgw/LxgwWenKai-Lite/releases/download/v1.511/LXGWWenKaiMonoLite-Regular.ttf
 
 jobs:
   build:
@@ -175,9 +176,10 @@ jobs:
 
             2. 英文字体宽度为520，中文为1040。
 
-            3. 英文字体编译时enable TXTR特性，就是Monaspace字体的text healing。
+            3. 英文字体编译时使能`TXTR`特性，就是Monaspace字体的text healing。
 
-            4. 合并字体中的中文字体为霞鹜文楷Lite等宽(LXGW WenKai Mono Lite)。
+            4. 合并字体(${{ env.FUSION_ID }}-Regular.ttf)中的中文字体为[霞鹜文楷Lite等宽(LXGW WenKai Mono Lite)](${{ env.LXGW_WENKAI_LITE }})。
+
 
             ${{ env.fontinfo }}
           files: |
