--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -178,8 +178,7 @@ jobs:
 
             3. 英文字体编译时使能`TXTR`特性，就是Monaspace字体的text healing。
 
-            4. 合并字体(${{ env.FUSION_ID }}-Regular.ttf)中的中文字体为[霞鹜文楷Lite等宽(LXGW WenKai Mono Lite)](${{ env.LXGW_WENKAI_LITE }})。
-
+            4. 合并字体(${{ env.FUSION_ID }}-Regular.ttf)中的中文字体为[霞鹜文楷Lite等宽](${{ env.LXGW_WENKAI_LITE }})。
 
             ${{ env.fontinfo }}
           files: |
