--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: lts/*
+          node-version: 18
 
       - name: Install ttfautohint
         shell: bash
