--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: lts/*
 
       - name: Install ttfautohint
         shell: bash
@@ -164,7 +164,7 @@ jobs:
           
       - name: Publish Release
         id: publish_release
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631
         with:
           tag_name: ${{ env.NOW }}
           draft: false
@@ -174,11 +174,13 @@ jobs:
 
             1. Iosevka字体参考FiraCode风格，调整了i、r、l、t和1、4、0等数字的样式。
 
-            2. 英文字体宽度为520，中文为1040。
+            2. 英文字体宽度为`520`，中文为`1040`。
 
-            3. 英文字体编译时使能TXTR特性，就是Monaspace字体的text healing。
+            3. 英文字体编译时使能`TXTR`特性，就是Monaspace字体的text healing。
 
-            4. 合并字体(${{ env.FUSION_ID }}-Regular.ttf)中的中文字体为[霞鹜文楷Lite等宽](${{ env.LXGW_WENKAI_LITE }})
+            4. 中文字体为[霞鹜文楷Lite等宽](${{ env.LXGW_WENKAI_LITE }})。
+
+            5. 中英文合并字体是(${{ env.FUSION_ID }}-Regular.ttf)。
 
 
             ${{ env.fontinfo }}
