--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -139,13 +139,14 @@ jobs:
 
       - name: Generate artifact info
         run: |
-          echo 'fontinfo<<EOF' >> $GITHUB_ENV
+          echo 'release_body<<EOF' >> $GITHUB_ENV
           cd iosevka && git log -1 --oneline >> $GITHUB_ENV
           cd ..
 
           # Print font info.
           for STYLE in "Regular"; do
             echo "" >> $GITHUB_ENV
+            echo "# Font Info:" >> $GITHUB_ENV
             echo "* IosevkaTermSS05NerdFontMono-${STYLE}.ttf:" >> $GITHUB_ENV
             python width.py -c IosevkaTermSS05NerdFontMono-${STYLE}.ttf >> $GITHUB_ENV
 
@@ -160,30 +161,30 @@ jobs:
 
           echo 'EOF' >> $GITHUB_ENV
 
-          echo ${{ env.fontinfo }}
+          echo ${{ env.release_body }}
           
       - name: Publish Release
         id: publish_release
-        uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631
+        uses: softprops/action-gh-release@2
         with:
           tag_name: ${{ env.NOW }}
           draft: false
           prerelease: false
           body: >
-            针对Iosevka字体过于瘦高进行了优化下面的优化：
+            针对原版Iosevka字体过于瘦高进行了优化下面的优化：
 
             1. Iosevka字体参考FiraCode风格，调整了i、r、l、t和1、4、0等数字的样式。
 
-            2. 英文字体宽度为`520`，中文为`1040`。
+            2. 加宽英文字体，宽度从默认的`500`增加到`520`，中文相应的从`1000`增加到`1040`，保持等宽。
 
-            3. 英文字体编译时使能`TXTR`特性，就是Monaspace字体的text healing。
+            3. Iosevka字体编译时使能`TXTR`特性，即Monaspace字体的`text healing`。
 
             4. 中文字体为[霞鹜文楷Lite等宽](${{ env.LXGW_WENKAI_LITE }})。
 
             5. 中英文合并字体是(${{ env.FUSION_ID }}-Regular.ttf)。
 
 
-            ${{ env.fontinfo }}
+            ${{ env.release_body }}
           files: |
             iosevka/dist/IosevkaTermSs05/TTF/IosevkaTermSs05-Regular.ttf
             iosevka/dist/IosevkaTermSs05/TTF/IosevkaTermSs05-Italic.ttf
