--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -185,7 +185,7 @@ jobs:
 
             4. 中文字体为[霞鹜文楷Lite等宽](${{ env.LXGW_WENKAI_LITE }})。
 
-            5. 中英文合并字体是[${{ env.FUSION_ID }}-Regular.ttf](${{ github.server_url }}/${{ github.repository }}/releases/download/${{ NOW }}/${{ env.FUSION_ID }}-Regular.ttf)。
+            5. 中英文合并字体是[${{ env.FUSION_ID }}-Regular.ttf](${{ github.server_url }}/${{ github.repository }}/releases/download/${{ env.NOW }}/${{ env.FUSION_ID }}-Regular.ttf)。
 
 
             ${{ env.release_body }}
