美化字体信息输出

--- a/.github/workflows/custom-build.yml
+++ b/.github/workflows/custom-build.yml
@@ -148,9 +148,9 @@ jobs:
             echo "" >> $GITHUB_ENV
             echo "# Font Info:" >> $GITHUB_ENV
             echo "* IosevkaTermSS05NerdFontMono-${STYLE}.ttf:" >> $GITHUB_ENV
-            echo "```" >> $GITHUB_ENV
+            echo "\`\`\`" >> $GITHUB_ENV
             python width.py -c IosevkaTermSS05NerdFontMono-${STYLE}.ttf >> $GITHUB_ENV
-            echo "```" >> $GITHUB_ENV
+            echo "\`\`\`" >> $GITHUB_ENV
 
             # echo "" >> $GITHUB_ENV
             # echo "* ${FILE_MERGED_WFM}-${STYLE}.ttf:" >> $GITHUB_ENV
@@ -158,9 +158,9 @@ jobs:
 
             echo "" >> $GITHUB_ENV
             echo "* ${FUSION_ID}-${STYLE}.ttf:" >> $GITHUB_ENV
-            echo "```" >> $GITHUB_ENV
+            echo "\`\`\`" >> $GITHUB_ENV
             python width.py -c ${FUSION_ID}-${STYLE}.ttf >> $GITHUB_ENV
-            echo "```" >> $GITHUB_ENV
+            echo "\`\`\`" >> $GITHUB_ENV
           done
 
           echo 'EOF' >> $GITHUB_ENV
